--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -14,7 +14,6 @@
         android:background="@color/white"
         android:scrollbars="vertical">
 
-
         <TextView
             android:id="@+id/aboutUsHead"
             android:layout_width="wrap_content"
@@ -59,20 +58,20 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/iosFusionI"
-                    android:layout_width="320dp"
-                    android:layout_height="210dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iosFusionD"
-                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ios1" />
 
                 <TextView
@@ -90,16 +89,13 @@
 
                 <TextView
                     android:id="@+id/iosFusionD"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="50dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="15dp"
                     android:text="iOS Fusion is a premium workshop conducted by Apple Developers Group, VIT. Participants in our workshop are taught to create apps for  iOS  devices.  "
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iosFusionT" />
 
@@ -126,17 +122,17 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/unidevD"
-                    android:layout_width="320dp"
-                    android:layout_height="210dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
+                    android:id="@+id/unidevI"
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/unidevD"
-                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ios2" />
 
                 <TextView
@@ -156,14 +152,11 @@
                     android:id="@+id/unidevD"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="45dp"
-                    android:layout_marginRight="45dp"
+                    android:layout_marginRight="15dp"
                     android:text="UNIDEV, a one-day workshop for both novices and experts, that gives a chance to explore tricks and tweaks of using Unity  Software  along with the powerful SDK Vuforia in order to build something as cool as Pokémon Go!"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/unidevT" />
 
@@ -174,12 +167,10 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="30dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -192,16 +183,16 @@
 
                 <ImageView
                     android:id="@+id/iosFusionI3"
-                    android:layout_width="320dp"
-                    android:layout_height="210dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/hackD"
-                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ios3" />
 
                 <TextView
@@ -221,17 +212,13 @@
                     android:id="@+id/hackD"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="45dp"
-                    android:layout_marginRight="45dp"
+                    android:layout_marginRight="15dp"
                     android:text="Apple Developers Group conducts a 48 hour long hackathon that encourages young developers to come up with scintillating technical solutions to real world problems."
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/hackT" />
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
