--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -39,32 +39,36 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/onboardViewpager"
         android:layout_width="match_parent"
-        android:layout_height="576dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="530dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/btntab" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:padding="5dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onboardViewpager">
 
-        android:padding="20dp">
         <Button
             android:id="@+id/nextBtnLanding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="55dp"
-            android:paddingRight="55dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/landingnextlbtnbg"
-            android:text="next"
-            android:textColor="#FF6200"
             android:foreground="?android:attr/selectableItemBackground"
-            />
+            android:paddingLeft="55dp"
+            android:paddingTop="10dp"
+            android:paddingRight="55dp"
+            android:paddingBottom="10dp"
+            android:text="next"
+            android:textColor="#FF6200" />
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
