--- a/app/src/main/res/layout/slidelayoutonboard.xml
+++ b/app/src/main/res/layout/slidelayoutonboard.xml
@@ -2,57 +2,59 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:id="@+id/landingTab1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    android:layout_height="530dp"
+    android:padding="10dp"
+    >
 
         <ImageView
             android:id="@+id/imageonboard"
             android:layout_width="280dp"
             android:layout_height="220dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/adglogo2" />
+            android:src="@drawable/adglogo2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/titleOnboard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="30dp"
-            android:fontFamily="@font/robotomedium"
-            android:text="ADG Interview Ground"
-            android:textAlignment="center"
-            android:textColor="#0C233C"
-            android:textSize="25sp" />
+    <TextView
+        android:id="@+id/titleOnboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:padding="5dp"
+        android:fontFamily="@font/robotomedium"
+        android:text="ADG Interview Ground"
+        android:textAlignment="center"
+        android:textColor="#0C233C"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageonboard"/>
 
         <TextView
             android:id="@+id/descOnboard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="0dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginBottom="95dp"
+            android:layout_marginEnd="20dp"
             android:padding="35dp"
             android:fontFamily="@font/robotolight"
             android:singleLine="false"
             android:text="ADG’s official coding app which lets you code with your smartphone"
             android:textAlignment="center"
             android:textColor="#222222"
-            android:textSize="18sp" />
-    </LinearLayout>
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/titleOnboard"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
