--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -41,6 +41,7 @@
         android:layout_height="25dp"
         android:layout_marginTop="25dp"
         android:layout_marginRight="20dp"
+        android:padding="2dp"
         android:background="@drawable/backbgeditpro"
         android:foreground="?android:attr/selectableItemBackground"
         android:fontFamily="@font/robotoregular"
@@ -98,7 +99,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
-                    android:fontFamily="@font/robotoregular"
+                    android:fontFamily="@font/robotomedium"
                     android:inputType="textPersonName"
                     android:padding="5dp"
                     android:text="Arupam Kumar Saha"
@@ -115,7 +116,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="5dp"
-                    android:fontFamily="@font/robotoregular"
+                    android:fontFamily="@font/robotomedium"
                     android:hint="VIT Registration Number"
                     android:padding="5dp"
                     android:text="19MIC0106"
@@ -132,7 +133,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="5dp"
-                    android:fontFamily="@font/robotoregular"
+                    android:fontFamily="@font/robotomedium"
                     android:hint="Email ID"
                     android:inputType="textPersonName"
                     android:padding="5dp"
@@ -141,7 +142,7 @@
                     android:text="arupamkumar.saha2019@vitstudent.ac.in"
                     android:textColor="#000"
                     android:textColorHint="#707070"
-                    android:textSize="11dp" />
+                    android:textSize="12dp" />
 
                 <TextView
                     android:id="@+id/editProfilePhoneNumber"
@@ -150,7 +151,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="5dp"
-                    android:fontFamily="@font/robotoregular"
+                    android:fontFamily="@font/robotomedium"
                     android:inputType="textPersonName"
                     android:padding="5dp"
                     android:text="8650997269"
@@ -168,13 +169,13 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/robotoregular"
+                    android:fontFamily="@font/robotomedium"
                     android:inputType="textPersonName"
                     android:padding="5dp"
                     android:text="github.com/arupam/"
                     android:textColor="#000"
-                    android:textColorHint="#707070"
-                    android:textSize="11dp"
+
+                    android:textSize="12dp"
                     app:layout_constraintStart_toEndOf="@+id/profile_image"
                     app:layout_constraintTop_toBottomOf="@+id/editProfilePhoneNumber" />
             </LinearLayout>
